[package]
name = "mork-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
log = "0.4"
fdt = "0.1.5"
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
bitflags = "1.2.1"
mork-common = { path = "../../mork-common" }
mork-capability = { path = "../mork-capability" }